# pyspark-batch-etl

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements-dev.txt  requirements.txt  run_pipeline.py
dags/: etl_pipeline_dag.py  taxi_etl_dag.py
data/processed/: README.md
data/raw/: customers.csv  orders.csv
docs/: architecture.md  learning-guide.md
examples/: pyspark_basics.py
sql/: create_tables.sql  validation_queries.sql
src/: 01_ingest.py  02_clean.py  03_transform.py  04_validate.py  day1_basics.py  pipeline_utils.py
src/taxi_etl/: __init__.py  cli.py  config.py  pipeline.py  postgres.py  quality.py  schemas.py  spark.py  transformations.py
tests/: conftest.py  test_config.py  test_quality.py  test_transformations.py
