[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-batch-etl"
version = "0.2.0"
description = "A student-friendly NYC taxi batch ETL pipeline built with PySpark and Airflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3,<3",
    "psycopg[binary]>=3.2,<4",
    "pyspark==4.1.2",
    "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
orchestration = [
    "apache-airflow==3.2.2",
    "apache-airflow-providers-standard",
]
dev = [
    "pytest>=8,<10",
    "ruff>=0.12,<1",
]

[project.scripts]
taxi-etl = "taxi_etl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
